<resources>
    <string name="app_name">RandomUser</string>
    <string name="action_refresh">Refresh</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="retry">Retry</string>
    <string name="details">Details:</string>
    <string name="user_information">User Information</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="add_contact">Add Contact</string>
    <string name="scan_qr">Scan QR</string>
</resources>